# icfp2014

./: .gitignore  README.md  git-filter-branch  split-scala.sh
haskell/: lahnparty-icfp2014.cabal
haskell/src/: rungcc.hs
haskell/src/LahnParty/: GCC.hs
haskell/src/LahnParty/GCC/: Assembler.hs  Error.hs  Examples.hs  Exec.hs  Machine.hs  Monad.hs  Pretty.hs  State.hs  Syntax.hs
haskell/src/LahnParty/GHC/: Machine.hs  Sim.hs  Syntax.hs  TestState.hs
haskell/test/: tests.hs
haskell/test/LahnParty/GCC/: AssemblerTest.hs  ExecTest.hs
java/GhcMacroAsm/: .project  pgm.ghc  pgm.txt
java/GhcMacroAsm/src/: GhcMacroAsm.java  Label.java  NCons.java  NVar.java
notes/: ghc-asm-test.txt  ghc-assembler-conventions.txt  ghc-processor-notes.txt  lambda-man-strategy.md  local-nosym.gcc  macroasm-followtheleftwall.txt
programs/: 2Submission.gcc  faulty.gcc  faulty.gcc.hs  firstSubmission.gcc  submission1.checksum  submission2.checksum
programs/submission2/solution/: lambdaman.gcc
