name:          lahnparty-icfp2014
version:       0.0
author:        LahnParty team, University of Marburg
maintainer:    icfp14@lists.uni-marburg.de
build-type:    Simple
cabal-version: >= 1.10

library
  default-language: Haskell2010
  hs-source-dirs:   src
  build-depends:
    base, array, lens, mtl >= 2.2
  exposed-modules:
    LahnParty.GCC,
    LahnParty.GCC.Syntax,
    LahnParty.GCC.State,
    LahnParty.GCC.Error,
    LahnParty.GCC.Monad,
    LahnParty.GCC.Exec,
    LahnParty.GHC.Syntax,
    LahnParty.GHC.Machine
